<resources>
    <string name="app_name">Client</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="addressLine1">Address Line</string>
    <string name="addressLine2">Address Line2</string>
    <string name="city">City</string>
    <string name="state">state</string>
    <string name="zipCode">zipcode</string>
    <string name="emailAddress">email address</string>
    <string name="homePhone">home phone</string>
    <string name="cellPhone">cellphone</string>
    <string name="clearButton">clear button</string>
    <string name="submitButton">submit button</string>
    <string name="serverHost">Server Host</string>
    <string name="serverPort">Server Port</string>
    <string name="userName">User Name</string>
    <string name="maleButton">Male</string>
    <string name="femaleButton">Female</string>
    <string name="genderField">Gender:</string>
    <string name="signIn">SIGN IN</string>
    <string name="Register">REGISTER</string>
    <string name="Password">Password</string>
    <string name="webAccess">Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapFragmentMessage">Click on marker to see event details`</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Person_Gender">Gender</string>
    <string name="group_title_event">Life Events</string>
    <string name="group_title_family">Family</string>
    <string name="search">Search item</string>
    <string name="settings">Settings item</string>
    <string name="Up_button">Up Button</string>
    <string name="logout">RETURN TO LOGIN SCREEN</string>
    <string name="logout_title">logout</string>
    <string name="femaleEvent_switch_description">FILTER EVENT\'S BASED ON GENDER</string>


</resources>