<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <TextView
        android:id="@+id/first_name_person_activity"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Bob" />

    <TextView
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_Name"
        tools:text="@string/First_Name"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
     />

    <TextView
        android:id="@+id/last_name_person_activity"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Sagget"
        />

    <TextView
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Last_Name"
        tools:text="@string/Last_Name"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />
    <TextView
        android:id="@+id/gender_person_actvity"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Female"
        />

    <TextView
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Person_Gender"
        tools:text="@string/Person_Gender"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />
    <ExpandableListView
        android:id="@+id/person_expandable_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"



        />


</LinearLayout>