<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xlmns="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"

        >

        <LinearLayout

            android:id="@+id/life_story_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Life Story Lines"
                android:textSize="24dp"
                android:textStyle="normal"
                tools:text="Life Story Lines" />

            <TextView
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SHOWLIFE STORY LINES"
                tools:text="SHOWLIFE STORY LINES"
                />


        </LinearLayout>

        <Switch
            android:id="@+id/life_story_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        >

        <LinearLayout
            android:id="@+id/family_tree_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Family tree Lines"
                android:textSize="24dp"
                android:textStyle="normal"
                tools:text="Family Tree Lines" />

            <TextView
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SHOW FAMILY STORY LINES"
                tools:text="SHOW FAMILY STORY LINES"
                />


        </LinearLayout>

        <Switch
            android:id="@+id/Family_Tree_line_Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
   />


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        >

        <LinearLayout
            android:id="@+id/spouse_line_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Spouse Lines"
                android:textSize="24dp"
                android:textStyle="normal"
                tools:text="Spouse Lines" />

            <TextView
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SHOW SPOUSE LINE"
                tools:text="SHOW SPOUSE LINES"
                />


        </LinearLayout>

        <Switch

            android:id="@+id/Spouse_line_Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            />


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        >

        <LinearLayout
            android:id="@+id/father_side_line_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Father Side"
                android:textSize="24dp"
                android:textStyle="normal"
                tools:text="Father Side" />

            <TextView
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FILTER BY FATHER'S SIDE OF FAMILY"
                tools:text="FILTER BY FATHER'S SIDE OF FAMILY"
                />


        </LinearLayout>

        <Switch

            android:id="@+id/Father_Side_Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            />


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        >

        <LinearLayout
            android:id="@+id/mother_side_line_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Mother's Side"
                android:textSize="24dp"
                android:textStyle="normal"
                tools:text="Mother's Side" />

            <TextView
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FILTER BY MOTHERS SIDE OF FAMILY"
                tools:text="FILTER BY MOTHERS SIDE OF FAMILY"
                />


        </LinearLayout>

        <Switch

            android:id="@+id/mother_side_line_Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            />


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        >

        <LinearLayout
            android:id="@+id/male_event_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Male Events"
                android:textSize="24dp"
                android:textStyle="normal"
                tools:text="Male Events" />

            <TextView
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FILTER EVENT'S BASED ON GENDER"
                tools:text="FILTER EVENT'S BASED ON GENDER"
                />


        </LinearLayout>

        <Switch

            android:id="@+id/male_events_line_Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            />


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        >

        <LinearLayout
            android:id="@+id/female_event_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Female Events"
                android:textSize="24dp"
                android:textStyle="normal"
                tools:text="Female Events" />

            <TextView
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/femaleEvent_switch_description"
                tools:text="FILTER EVENT'S BASED ON GENDER"
                />


        </LinearLayout>

        <Switch

            android:id="@+id/female_events_line_Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        >


     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



        <TextView
            android:id="@+id/logout_settings"
            android:textStyle="italic"
            android:textSize="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_title"
            tools:text="Logout"
            />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="15dp"
            android:text="@string/logout"
            tools:text="RETURN TO LOGIN SCREEN"
            />


     </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />

</LinearLayout>